--- a/style/style.css
+++ b/style/style.css
@@ -24,6 +24,7 @@
   font-family: Mosaic;
   src: url(../FONTS/PaletteMosaic-Regular.ttf);
 }
+
 @font-face {
   font-family: pattaya;
   src: url(../FONTS/Pattaya-Regular.ttf);
@@ -41,6 +42,7 @@ body {
   width: 130px;
   cursor: pointer;
 }
+
 .cln-lst {
   margin: 0;
   padding: 0;
@@ -50,6 +52,7 @@ body {
 .about-container {
   display: none;
 }
+
 /* LAYOUT */
 
 .container {
@@ -126,6 +129,7 @@ li.clicked {
 .sortby-keywords {
   width: 50%;
 }
+
 /* GALLERY */
 
 .superior-container {
@@ -140,6 +144,7 @@ li.clicked {
   align-content: center;
   grid-template-columns: repeat(auto-fill, 240px);
 }
+
 .gallery-container > img {
   align-self: center;
   cursor: pointer;
@@ -150,6 +155,7 @@ li.clicked {
   opacity: 0.85;
   border: 1px solid white;
 }
+
 .meme-container {
   display: grid;
   grid-gap: 20px;
@@ -158,6 +164,7 @@ li.clicked {
   align-content: center;
   grid-template-columns: repeat(auto-fill, 240px);
 }
+
 .meme-container > img {
   align-self: center;
   cursor: pointer;
@@ -236,6 +243,7 @@ li.clicked {
   background-color: #fff;
   border-radius: 0.75rem;
 }
+
 .stickers-div {
   grid-column: 1/-1;
   grid-row: 5 / span 1;
@@ -286,6 +294,7 @@ canvas {
 }
 
 .about-contact {
+  width: 100vw;
   display: flex;
   transform: scale(0.3);
 }
